tests/ui/inference/multiple-impl-apply.stderr
error[E0283]: type annotations needed
  --> $DIR/multiple-impl-apply.rs:34:9
   |
LL |     let y = x.into();
   |         ^     ---- type must be known at this point
   |
note: multiple `impl`s satisfying `_: From<Baz>` found
  --> $DIR/multiple-impl-apply.rs:14:1
   |
LL | impl From<Baz> for Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl From<Baz> for Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `Baz` to implement `Into<_>`
help: consider giving `y` an explicit type
   |
LL |     let y: /* Type */ = x.into();
   |          ++++++++++++

error[E0283]: type annotations needed
  --> $DIR/multiple-impl-apply.rs:67:29
   |
LL |     let _ = n == 42usize as _;
   |                             ^ cannot infer type
   |
note: multiple `impl`s satisfying `u32: PartialEq<_>` found
  --> $DIR/multiple-impl-apply.rs:52:1
   |
LL | impl PartialEq<Value> for u32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: and another `impl` found in the `core` crate: `impl PartialEq for u32;`

error[E0282]: type annotations needed
  --> $DIR/multiple-impl-apply.rs:72:24
   |
LL |     let _ = 42usize as _ == n;
   |                        ^ cannot infer type

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
